#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-24
2015-10-22 David Schneider
- change SharedFile::read to never read past fstat reported length of the
  file -  JIRA PSAS-192.
- use new UTESTSEXCL option in SConscript to exclude two tests.
- execute more unit tests (xtcChunkDgIter test)
	
Tag: V00-10-23
2015-10-21 David Schneider
- add LiveAvail as a psana python module that users will use.
- include python utility code for working with the DgramList.
	
Tag: V00-10-22
2015-10-16 David Schneider
- add code to address JIRA PSAS-192. This is hack code to trap for 
  a corrupt data condition that we think happens while reading from 
  the end of live .inprogress files.

Tag: V00-10-21
2015-09-29 David Schneider
- catch XTCLiveTimeout so user doesn't have to. JIRA PSAS-188

Tag: V00-10-20
2015-09-24 David Schneider
- reduce each stream read ahead from 64 to 20 to reduce latency with
  live data (from 3.2 seconds to 1 second for a typical 6 stream experiment). 
  Consequently less split events and out of order data will will be fixed 
  up by psana in live/xtc mode (as opposed to index mode)
	
Tag: V00-10-19
2015-09-23 David Schneider
- final support for liveAvail feature in this package(JIRA PSAS-184)
- fix bug and unit test from last checkins
- change RunFileIterLive to work with set of runs rather than Runs/interval type
- add MutexLock class so XtcStreamMerger can protect data used in both threads
- add LiveAvail (high level interface to feature) & StreamAvail (does counting) classes
- DgramReader - takes a reference to a LiveAvail shared pointer to set if in live mode
- XtcStreamDgIter - returns latest dg in queue for feature